[gd_scene load_steps=5 format=3 uid="uid://cvlivrphp416p"]

[ext_resource type="Script" path="res://cauldron/cauldron.gd" id="1_ffeai"]
[ext_resource type="Texture2D" uid="uid://chk7e4837im5l" path="res://cauldron/cauldron.png" id="2_3s3hv"]
[ext_resource type="Texture2D" uid="uid://0ow7trufpq3a" path="res://cauldron/cauldron_contents.png" id="3_tnxxa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8wdih"]
size = Vector2(170, 124.5)

[node name="cauldron" type="Area2D"]
position = Vector2(2, 3)
script = ExtResource("1_ffeai")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -65.25)
shape = SubResource("RectangleShape2D_8wdih")

[node name="Cauldron" type="Sprite2D" parent="."]
position = Vector2(-2, -60)
texture = ExtResource("2_3s3hv")

[node name="CauldronContents" type="Sprite2D" parent="Cauldron"]
texture = ExtResource("3_tnxxa")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
